testing/testcases/prototype/fail/try22b.adl
CONTEXT Try22b IN ENGLISH
r::A*B

INTERFACE BuggyInterface (t) : I[A]
  BOX [ "Me" : I
      ]
ENDCONTEXT

{-
   Purpose: This script is meant see that relations mentioned in the interface are defined.
   Result: FAIL
   Reason: relation t is not declared
   Error message:

   
-}